Update beecp_readme_cn.md
Add supplementary information